force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Account__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>