force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Campaign__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Campaign.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>smsMagic</relationshipName>
    <type>Lookup</type>
</CustomField>