force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Case__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>