force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Channel_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Template_Type__c</fullName>
    <description>Determines whether channel specific meta templates are used or not</description>
    <label>Channel Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTM</fullName>
            </value>
            <value>
                <fullName>Message Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>