force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Contact__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>smsMagic</relationshipName>
    <type>Lookup</type>
</CustomField>