force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Conversation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Conversation.</description>
    <label>Conversation</label>
    <referenceTo>smagicinteract__Conversation__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>