force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Converse_App__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Converse App.</description>
    <label>Converse App</label>
    <referenceTo>smagicinteract__Converse_App__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>