force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Country__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Country__c</fullName>
    <description>This field contains the value of the recipient country.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>