force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Delivery_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Delivery_Error_Message__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Delivery Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>