force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__deliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__deliveryStatus__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>Delivery Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>