force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Direction__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Direction__c</fullName>
    <description>This field determines whether its outgoing or inbound message. value 1 means outgoing, 0 means inbound.</description>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUT</fullName>
                <default>true</default>
                <label>OUT</label>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>