force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__disableSMSOnTrigger__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__disableSMSOnTrigger__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contains the value for SMS History. The value can be: 1 for creating SMS History record only or 0 for making callout and creating SMS History record.</description>
    <label>Disable SMS On Trigger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>