force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__external_field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__external_field__c</fullName>
    <defaultValue>null</defaultValue>
    <description>This field contains the ID for external systems.</description>
    <externalId>true</externalId>
    <label>External Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>