force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Favourite__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>Favourite</label>
    <type>Checkbox</type>
</CustomField>