force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Intent__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Intent__c</fullName>
    <label>Intent</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>