force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Is_Text_Unicode__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Text_Unicode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this field to make the message Unicode.</description>
    <label>Text Unicode</label>
    <type>Checkbox</type>
</CustomField>