force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Last_Incoming_Record__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Incoming_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Incoming Record</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>