force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Last_Incoming_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Incoming_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Incoming SMS</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>SMS History (Last Incoming SMS)</relationshipLabel>
    <relationshipName>SMS_History1</relationshipName>
    <type>Lookup</type>
</CustomField>