force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Last_Outgoing_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Last_Outgoing_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Outgoing SMS</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>SMS History (Last Outgoing SMS)</relationshipLabel>
    <relationshipName>SMS_History2</relationshipName>
    <type>Lookup</type>
</CustomField>