force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Lead__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to track sms&apos;s sent to Leads.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>smsMagic</relationshipName>
    <type>Lookup</type>
</CustomField>