force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__MMS_Subject__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Subject__c</fullName>
    <description>This field contains the subject of the MMS.</description>
    <label>MMS Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>