force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__New__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this field to make the message New.</description>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>