force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ObjectType__c</fullName>
    <description>Object type of receiver contact/lead/user</description>
    <label>ObjectType</label>
    <length>75</length>
    <type>Text</type>
</CustomField>