force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>