force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Opt_out_instruction_Appended__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_out_instruction_Appended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out instruction Appended</label>
    <type>Checkbox</type>
</CustomField>