force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__PhoneNumber__c</fullName>
    <description>This field contains the mobile number of the recipient.</description>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>