force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Previous_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Previous_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the lookup of previous message.</description>
    <label>Previous Message</label>
    <referenceTo>smagicinteract__smsMagic__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>