force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Response_Time__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Response_Time__c</fullName>
    <formula>IF(ISPICKVAL(smagicinteract__Direction__c,&apos;OUT&apos;),
   (
    IF(smagicinteract__Last_Incoming_SMS__c == null, 
        IF( smagicinteract__Last_Incoming_Record__c == null, 0, ( CreatedDate  - 
             smagicinteract__Last_Incoming_Record__r.CreatedDate)*24*60 
          ),
        (CreatedDate - 
             smagicinteract__Last_Incoming_SMS__r.CreatedDate )*24*60 
      )
   ),
   IF( smagicinteract__Last_Outgoing_SMS__c == null, 0 , (CreatedDate - 
       smagicinteract__Last_Outgoing_SMS__r.CreatedDate)*24*60 
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>