force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <description>This field will provide information which routing rule is applied to the message record</description>
    <label>Routing Rule</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>