force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Sent_On__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sent_On__c</fullName>
    <description>This field contains the Sent On date.</description>
    <label>Sent On</label>
    <type>DateTime</type>
</CustomField>