force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>