force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__sentStatus__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__sentStatus__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <description>Deprecated. Do not use.</description>
    <label>Sent Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>