force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Shortened_Links__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Shortened_Links__c</fullName>
    <label>Shortened Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>