force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__SMS_Credits__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Credits__c</fullName>
    <description>This field contains the credits consumed while sending message.</description>
    <label>Message Credits</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>