force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related SMS template.</description>
    <label>SMS Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>SMS History</relationshipLabel>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>