force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Status__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Status__c</fullName>
    <description>This field contains the status of message. The status can be: Sent, Submitted, Queued, etc.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>READ</fullName>
            </value>
            <value>
                <fullName>RECEIVED</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
                <default>true</default>
                <label>SUBMITTED</label>
            </value>
            <value>
                <fullName>UNDELIVERED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>