force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__statusMessage__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__statusMessage__c</fullName>
    <description>This field contains the status message.</description>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>