force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Unformatted_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Unformatted_Phone_Number__c</fullName>
    <description>This field contains the mobile number in an unformatted way.</description>
    <label>Unformatted Phone Number</label>
    <type>Phone</type>
</CustomField>