force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__Use_Default_Sender__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Use_Default_Sender__c</fullName>
    <description>This field contains value of the default sender. The value can be: Record Owner or Current User.</description>
    <label>Use Default Sender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Owner</fullName>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>