force-app/main/default/objects/smagicinteract__smsMagic__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for Tasks created for User.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>smsMagic</relationshipName>
    <type>Lookup</type>
</CustomField>